# teddybox

./: .gitignore  README.md  env_vars.sh  setup_libs.sh
.github/workflows/: build-test.yml  release.yml
github/workflows/: build-test.yml  release.yml
patches/: malloc.diff
teddybox/: CMakeLists.txt  Makefile  part.lst  sdkconfig  sdkconfig.defaults
teddybox/components/lis3dh/: CMakeLists.txt
teddybox/components/lis3dh/include/: lis3dh.h  lis3dh_regs.h
teddybox/components/lis3dh/src/: lis3dh.c
teddybox/components/toniebox/: CMakeLists.txt  Kconfig.projbuild  component.mk
teddybox/components/toniebox/dac3100/: dac3100.c  dac3100.h
teddybox/components/toniebox/toniebox_esp32_v1.6.C/: adc.c  adc.h  board.c  board.h  board_def.h  board_pins_config.c  led.c  led.h
teddybox/components/trf7962a/: CMakeLists.txt
teddybox/components/trf7962a/include/: trf7962a.h
teddybox/components/trf7962a/src/: trf7962a.c
teddybox/main/: 00000000  CMakeLists.txt  Kconfig.projbuild  accel.c  accel.h  cloud.c  cloud.h  config.h  helpers.c  helpers.h  ledman.c  ledman.h  main.c  malloc.c  nfc.c  nfc.h  ota.c  ota.h  playback.c  playback.h  webserver.c  webserver.h  wifi.c  wifi.h
